Translate all Chinese content to English

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -12,7 +12,7 @@
     <title>ChainVest</title>
   </head>
   <body>
-    <!-- 这里是React将要挂载的根元素 -->
+    <!-- Root element where React will be mounted -->
     <div id="root"></div>
   </body>
 </html>
